<resources>
    <string name="app_name">Polls 2016</string>
    <string name="app_name_exclamation">Polls 2016</string>

    <string name="drawer_open">Opening</string>
    <string name="drawer_close">Closing</string>

    <string name="subtitle_home">Home</string>

    <string name="f_loading_loading_text">Loading polls&#8230;</string>

    <string name="f_home_available_text">Polls available.</string>

    <string name="a_details_title">Charts</string>
    <string name="a_slug_title">Topics</string>

    <string name="recycler_home_decoration">20</string>
    <string name="recycler_home_small_decoration">3</string>

    <string name="a_details_current_tab">Current</string>
    <string name="a_details_historical_tab">Historical</string>
    <string name="f_chart_historic_button">Historic</string>
    <string name="a_main_hamburger_description">Hamburger icon</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="loading_text">Loading&#8230;</string>
    <string name="recycler_item_forward_description">Icon to select Topic</string>
    <string name="not_enough_data_message">Not enough data yet! Check back later.</string>
    <string name="check_internet_message">Can\'t connect. Please check your Internet connection!</string>
    <string name="recycler_chart_election_date_message">Election date:</string>
    <string name="recycler_chart_poll_count_message">Poll count:</string>
    <string name="recycler_chart_last_updated_message">Last updated:</string>
    <string name="chart_election_date_to_be_determined_message">To be announced.</string>
    <string name="recycler_chart_icon_description">Expand Chart description</string>
    <string name="f_details_history_icon">View chart history</string>
    <string name="f_details_close_icon">Close details</string>
    <string name="f_details_provided_pollster_message">Data provided by HuffPost Pollster</string>
    <string name="f_details_expand_less_icon">Go back to available charts</string>
    <string name="f_details_historical_btn">Historical</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_rate">Rate app</string>

    <string name="f_about_author">Loop Cupcakes</string>
    <string name="f_about_date">January 2016</string>
    <string name="nav_like">Like app</string>
    <string name="nav_more">More apps</string>
    <string name="nav_share">Share app</string>
    <string name="app_sharing">App sharing</string>

    <string name="google_app_id">polls-a93ab</string>
    <string name="app_deep_scheme">polls2016</string>
    <string name="app_deep_host">polls.starting</string>

</resources>
