<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start">

        <ImageButton
            android:id="@+id/a_main_hamburger_image"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/a_main_hamburger_width"
            android:layout_height="@dimen/a_main_hamburger_height"
            android:layout_margin="@dimen/a_main_hamburger_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/a_main_hamburger_description"
            android:padding="@dimen/a_main_hamburger_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_menu_black_48dp"
            android:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="end|center"
            android:text="@string/f_home_available_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end">

            <ImageView
                android:layout_width="@dimen/recycler_card_icon_large_dims"
                android:layout_height="@dimen/recycler_card_icon_large_dims"
                android:gravity="end|center"
                android:src="@drawable/ic_timeline_black_48dp"
                android:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/f_details_provided_margin"
                android:layout_marginLeft="@dimen/f_details_provided_margin"
                android:layout_marginRight="@dimen/f_details_provided_margin"
                android:layout_marginStart="@dimen/f_details_provided_margin"
                android:gravity="end|center"
                android:text="@string/app_name_exclamation"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/a_main_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/a_main_recycler_margin">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>




